Working web not working phone

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
                 <span class="Particle_heart">♥</span>
                 <span class="Particle_heart">♥</span>
                 <span class="Particle_heart">♥</span>
-              </div>
+            </div>
             <h1 class="valentine">A little letter to say I love you :)</h1>
             <div class="envelope-wrapper">
                 <div id="envelope" class="close">
                     <div class="front flap"></div>
                     <div class="front pocket"></div>
                     <div class="letter">
-                        <p class="words line1">Hey Meg,</p>
-                        <p class="words line2">Words cannot express how important you are to me, so if your ever feeling down you can just come here to know that I love you</p>
-                        <p class="words line3">Love,</p>
+                        <p class="words line1">Meg,</p>
+                        <p class="words line2">You get more beautiful with every passing day! I'm so happy I can call you mine :)</p>
+                        <p class="words line3">Love You,</p>
                         <p class="words line4">Kyle</p>
                     </div>
                     <div class="hearts">
